--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,13 @@
 /.node_modules.ember-try/
 /bower.json.ember-try
 /package.json.ember-try
+
+### Django ###
+config.json
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+media
